Fixed overlapping border

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ li {
     padding: 4px;
     font-size: 1.3rem;
     text-align: left;
+    margin-bottom: -1px;
 }
 
 
